--- a/app/templates/pages/resultats.html
+++ b/app/templates/pages/resultats.html
@@ -15,8 +15,8 @@
             <div>
                 {%- for page in resultats.iter_pages() %}
                 {% if page %}
-                    {% if page != pagination.page %}
-                        <a href="{{ url_for('resultats', keyword=keyword1, page=page) }}">{{ page }}</a>
+                    {% if page != resultats.page %}
+                        <a href="{{ url_for('resultats', keyword=motclef, page=page) }}">{{ page }}</a>
                     {% else %}
                         <strong>{{ page }}</strong>
                     {% endif %}
