refonte page duc

--- a/app/templates/pages/projet.html
+++ b/app/templates/pages/projet.html
@@ -5,7 +5,7 @@
 		<figure class="projet-desc-img-global">
 			<div>
 				<div>
-					<img src="{{url_for('static', filename='img/projet_acte_1435.jpg')}}" alt="Acte du 1er octobre 1435" class="img"/>
+					<img src="{{url_for('static', filename='img/projet_acte_1435.jpg')}}" alt="Acte du 1er octobre 1435" width="100%" height="auto" />
 				</div>
 			</div>
 			<figcaption class="projet-desc-img-legend">
