--- a/app/templates/pages/duc.html
+++ b/app/templates/pages/duc.html
@@ -1,30 +1,45 @@
 {% extends "conteneur.html" %}
 {% block corps %}
-<div class="duc-global">
-	<div class="duc-citation">
-		<blockquote cite="https://gallica.bnf.fr/ark:/12148/btv1b60005361/f245.image">
-    	<p>Ung autre escu ensuivant estoit d’azur a trois fleurs de lis d’or a une bande de gueulles, autour duquel escu avoit paints potz d’or cassez dont yssoit grans flammes de feu gregeoys, et le champ sur quoy lesdiz pots estoient estoit my parti en quartier de noir et de bleu, soubz lequel tableau estoient escripz les vers qui s’ensuivent :<br />
-    		Charles de Bourbon suys, qui grant renom avoye<br />
-			En gracieuseté ou temps que je regnoye<br />
-			Entre tous me trouvay joyeulx et esbatant<br />
-			Comblé de plusieurs biens que l’omme est desirant<br />
-			Courtoisie, beaulté, bonté, tresor, largesse,<br />
-			Sens et honnesteté, bon advis, grant prouesse,<br />
-			De dames assailly plus que mon pere assez<br />
-			Dont, par l’ardeur d’amours, je prins, comme savez,<br />
-			Pour mon mot feu gregeoys, mais neantmoins mon feu<br />
-			D’alez a l’ospital en la fin contraint fu<br />
-			Hommaige au Dieu d’amours comme les autres fis, <br />
-			Et dessus le portal le mien blazon assis.</p>
-    	<footer>
-    		—<cite>Livre du coeur d’amour épris</cite> (BnF, ms. fr. 24399, f. 86 r/v).
-    	</footer>
-		</blockquote>
+<div class="projet-desc-global">
+	<div style="width: 100%; margin-right: 1%;">
+		<figure class="projet-desc-img-global">
+			<div>
+				<div>
+					<img src="{{url_for('static', filename='img/armorial_toison_or.jpeg')}}" alt="Armorial de l'Europe et de la Toison d'or, folio 54r" class="img"/>
+				</div>
+			</div>
+			<figcaption class="projet-desc-img-legend">
+				<p class="caption-main"><a href="https://gallica.bnf.fr/ark:/12148/btv1b55009806h/f115.item" target="_blank">Armorial de l'Europe et de la Toison d'or, folio 54r. L'écu du duc de Bourbon, grand du royaume, est placé immédiatement après ceux du roi, du dauphin et des princes Valois<br />(BnF, réserve, ms. 4770, f. 54r, XV<sup>e</sup>).</a></p>
+			</figcaption>
+		</figure>
+		<figure class="projet-desc-img-global">
+			<div>
+				<div>
+					<img src="{{url_for('static', filename='img/armorial_revel_33.jpeg')}}" alt="Armorial de Guillaume Revel, folio 33" class="img"/>
+				</div>
+			</div>
+			<figcaption class="projet-desc-img-legend">
+				<p class="caption-main"><a href="https://gallica.bnf.fr/ark:/12148/btv1b8470455b/f43" target="_blank">Représentation de Charles I<sup>er</sup> et d'Agnès de Bourgogne dans l'armorial de Guillaume Revel (BnF, ms. fr. 22297, f. 33r, XV<sup>e</sup>).</a></p>
+			</figcaption>
+		</figure>
 	</div>
-	<div>
-		<div clas="duc-image">
-			<img src="{{url_for('static', filename='img/duc_devise.jpg')}}" alt="Livre du coeur d’amour épris, folio 86 recto et verso" width="100%" height="auto" />
+	<div style="width: 100%;">
+		<div class="h1_global">
+			<h1>Charles I<sup>er</sup> et Agnès de Bourgogne</h1>
+		</div>
+		<div class="projet-desc-text">
+			<p>Charles I<sup>er</sup> et Agnès de Bourgogne sont les cinquièmes duc et duchesse de Bourbon, régnant de 1434 à 1456. Charles, descendant direct de saint Louis par son père et de Jean II le Bon par sa mère, fait partie des grands princes du royaume, proches conseillers du roi. Ses territoires principaux sont les duchés de Bourbonnais et d’Auvergne, le comté de Forez et la seigneurie de Beaujolais, qui forment un vaste ensemble au centre du royaume ; il est également comte de Clermont-en-Beauvaisis.</p>
+			<p>D’abord lieutenant général dans le Languedoc (1420-1423 ; <a href="{{url_for('acte', acte_id=1)}}" target="_blank">acte 1</a>), il est ensuite nommé dans les marches est du royaume, plus proches des terres bourbonnaises (<a href="{{url_for('acte', acte_id=17)}}" target="_blank">acte 17</a>). Son père, Jean I<sup>er</sup>, étant prisonnier des Anglais, il prend de facto les rênes du duché au côté de sa mère, la duchesse Marie de Berry.</p>
+			<p>La période qui suit son mariage avec Agnès de Bourgogne en 1425 (<a href="{{url_for('acte', acte_id=3)}}" target="_blank">actes 3</a> <a href="{{url_for('acte', acte_id=5)}}" target="_blank">et 5</a>) est d’abord marquée par des alliances politiques avec les comtes de Richemont et d’Armagnac (<a href="{{url_for('acte', acte_id=14)}}" target="_blank">actes 14</a>, <a href="{{url_for('acte', acte_id=18)}}" target="_blank">18</a> <a href="{{url_for('acte', acte_id=19)}}" target="_blank">et 19</a>) dans le cadre de la guerre de Cent de ans (<a href="{{url_for('acte', acte_id=24)}}" target="_blank">acte 24</a>). Elle est ensuite scandée par des abstinences de guerre avec la Bourgogne (<a href="{{url_for('acte', acte_id=32)}}" target="_blank">acte 32</a>), entrecoupées de poussées guerrières dont les deux camps prennent tour à tour l’initiative. Jusqu’en 1431, puis à nouveau en 1434, le duc de Savoie fait partie des belligérants (<a href="{{url_for('acte', acte_id=30)}}" target="_blank">actes 30</a> <a href="{{url_for('acte', acte_id=31)}}" target="_blank">et 31</a>).</p>
+			<p>Agnès de Bourgogne tient un rôle de premier plan dans la recherche de la paix. Ces efforts se concrétisent d’abord à la conférence d’Anse en décembre 1434, puis à celle de Nevers deux mois plus tard, et préparent la conférence d’Arras où Charles mène la délégation française.</p>
+			<p>Le duc s’engage à la fin des années 1430 dans un bras de fer avec le pouvoir monarchique, dont le conflit armé de la Praguerie de 1440 est l’acmé. Dernière velléité guerrière d’un prince habitué aux champs de bataille depuis vingt ans, mais aussi programme politique d’un grand feudataire qui ambitionne de restructurer le royaume, cette lutte se solde par un échec.</p>
+			<p>Replié dans leur principauté, Charles I<sup>er</sup> et Agnès de Bourgogne mettent à profit les années 1440 pour consolider leur administration, notamment celle de leurs finances, et transformer la cour de Moulins en un centre artistique majeur. Ces années sont aussi l’occasion pour le duc et la duchesse d’affirmer leur place de grands seigneurs, comme en témoigne l’armorial commandé au héraut Guillaume Revel, qui offre la représentation d’un domaine étendu où la noblesse se tient derrière un prince replacé dans son extraction royale. Charles I<sup>er</sup> conclut enfin des alliances matrimoniales importantes pour ses enfants avec les maisons d’Anjou (1437) et de Bourgogne (1454), et parvient à marier son héritier Jean II à Jeanne de France, fille du roi.</p>
+			<p>La fin de la vie du duc est marquée par la maladie. Après une première crise de goutte en 1448, ses déplacements sont fortement limités. Son état s’aggrave dans la seconde moitié de l’année 1454, à partir de laquelle il ne quitte plus sa capitale et ses abords immédiats, où il finit par décéder le 4 décembre 1456. Agnès de Bourgogne meurt en décembre 1476.</p>
 		</div>
 	</div>
 </div>
 {% endblock %}
+
+Montluçon 381
+Montbrison 437
+Moulins 369
