--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -1,3 +1,34 @@
+/* PAGE ACCUEIL */
+.form-home {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	width: 100%;
+	height: auto;
+	margin-bottom: 6%;
+}
+
+.form-home > input {
+	width: 50%;
+	margin-right: 0%;
+	height: auto;
+	border-bottom: 0.75px thick double;
+	border-top-style: none;
+	border-right-style: none;
+	border-left-style: none;
+	text-align: center;
+}
+
+.form-home > div > button {
+	margin-left: 0%;
+	border-bottom: 0.25px thick;
+	border-top-style: none;
+	border-right-style: none;
+	border-left-style: none;
+	background-color: transparent;
+}
+
+/* PAGE RECHERCHE */
 .form-global {
 	margin-top: 3%;
 	margin-right: 20%;
