--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -9,76 +9,6 @@ a:hover, a:active {
     color: #B1B0B0;
 }
 
-/* NAVBAR */
-.nav-global {
-    display: flex;
-    flex-direction: row;
-    background: #f8f9fa;
-    padding: 1.25%;
-    margin: auto;
-    flex-wrap: wrap;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-.fixed-top {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-}
-
-.nav-item {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: auto;
-}
-
-.nav-item > li {
-    margin-right: 5%;
-    margin-left: 5%;
-    list-style: none;
-    width: 100%;
-    flex-wrap: wrap;
-}
-
-/* DROPDOWN > https://www.w3schools.com/howto/howto_css_dropdown.asp */
-
-.dropbtn {
-  background-color: inherit;
-  color: black;
-  border: none;
-  font-family: inherit;
-  font-size: inherit;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f8f9fa;
-  text-decoration: none;
-  min-width: 160px;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #DBDBDB;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
 /* TITRES GLOBAL */
 .h1_global {
     display: flex;
@@ -117,148 +47,7 @@ a:hover, a:active {
     margin-right: 100px;
     margin-top: 0px;
     margin-bottom: 0px;
-}
-
-
-/* HEADER */
-.header-global {
-    display: flex;
-    flex-direction: row;
-    background-color: #f8f9fa;
-    padding-left: 3%;
-    margin-top: 4%;
-}
-
-.header-h1 {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-}
-
-.header-text-global {
-    display: flex;
-    flex-direction: row;
-    width: 70%;
-    height: auto;
-}
-
-.l1 {
-    font-size: 90px;
-    line-height: 100%;
     font-family: 'Open Sans', sans-serif;
-    margin-top: 0%;
-    margin-bottom: 2%;
-}
-
-.l2 {
-    font-size: 50px;
-    line-height: 50%;
-    text-indent: 3%;
-    font-family: Helvetica;
-    font-weight: 300;
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-.l3 {
-    font-size: 50px;
-    line-height: 150%;
-    text-indent: 8%;
-    font-family: Helvetica;
-    font-weight: 300;
-    margin-top: 2%;
-    margin-bottom: 0%;
-}
-
-.charles {
-    font-size: 90px;
-    font-family: 'Lato', sans-serif;
-}
-
-.bourbon {
-    font-size: 90px;
-    font-family: 'Roboto', sans-serif;
-}
-
-.header-img-global {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    flex-wrap: wrap;
-    width: 30%;
-}
-
-.header-img {
-    width: 60%;
-    height: auto;
-}
-
-.rotate div img {
-  -webkit-transition: all 0.75s ease;
-  transition: all 2s ease;
-}
- 
-.rotate div:hover img {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(360deg);
-}
-
-
-/* FOOTER */
-.bloc-footer {
-    background: #f8f9fa;
-}
-
-.global-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 2%;
-    width: 80%;
-    margin: auto;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.name-icon-footer-global {
-    display: flex;
-    flex-direction: row;"
-}
-
-.text-footer {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    justify-content: center;
-}
-
-.name-footer {
-    font-size: small;
-    width: 70%;
-    height: auto;
-}
-
-.icon-footer {
-    width: 95%;
-    height: auto;
-}
-
-.credit-footer {
-    font-size: x-small;
-    text-align: justify;
-    margin-top: 0.5%;
-    margin-bottom: 0.5%;
-}
-
-.box-img-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 30%;
-}
-
-.img-footer {
-    width: 100%;
-    height: auto;
 }
 
 /* ACCUEIL */
@@ -295,66 +84,44 @@ a:hover, a:active {
     justify-content: center;
     text-align: justify;
     font-family: 'Open Sans', sans-serif;
-    font-family: 'Open Sans', sans-serif;
 }
 
-/* PROJET ET BIBLIO */
-.projet-desc-global {
+/* PAGES PROJET = À PROPOS, BIBLIOGRAPHIE, LE DUC */
+.projet-global {
     display: flex;
     flex-direction: row;
-    font-family: 'Open Sans', sans-serif;
     margin-top: 3%;
     margin-bottom: 3%;
 }
 
-.projet-desc-img-global {
+.projet-img-global {
     display: flex;
     flex-direction: column;
     margin-top: 5%;
     width: auto;
 }
 
-.projet-desc-img-legend {
-    width: 90%;
+.projet-img-legend {
+    width: 100%;
 }
 
-.projet-desc-text {
+.projet-text {
     text-align: justify;
     margin-top: 4%;
 }
 
-.biblio-text {
-    font-size: 11pt;
-}
-
-.biblio-text > p {
+#biblio > p {
     margin-top: 1%;
     margin-bottom: 1%;
     text-indent: -2%;
 }
 
-.biblio-img-legend {
-    width: 100%;
+.duc-biblio {
+    font-size: 10pt;
+    margin-top: 8%;
 }
 
-/* SOMMAIRE */
-.global-sommaire {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 90%;
-    margin: auto;
-}
-
-.sommaire {
-    text-align: justify;
-    margin: auto;
-    margin-top: 6%;
-    padding-left: 26%;
-    padding-right: 19%;
-}
-
-/* CORPUS */
+/* CORPUS = LISTE DES ACTES */
 .corpus-global {
     font-family: 'Open Sans', sans-serif;
     margin-top: 2%;
@@ -366,9 +133,8 @@ a:hover, a:active {
 .acte-global {
     display: flex;
     flex-direction: column;
-    width: 80%;
-    flex-wrap: wrap;
     width: auto;
+    flex-wrap: wrap;
     margin: auto;
     margin-bottom: 2%;
     font-family: 'Open Sans', sans-serif;
@@ -537,29 +303,10 @@ a:hover, a:active {
     text-indent: 2%;
 }
 
-/* RESULTATS */
-.result-global {
-    display: flex;
-    flex-direction: column;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.result-item {
-    margin-top: 2.5%;
-    margin-bottom: 2.5%;
-}
-
-.result-item-acte {
-    font-weight: bold;
-    margin-bottom: 0.5%;
-}
-
 /* CONTACT */
 .contact-global {
     font-family: 'Open Sans', sans-serif;
-    margin-top: 10%;
+    margin-top: 6%;
     margin-bottom: 10%;
 }
 
@@ -569,10 +316,20 @@ a:hover, a:active {
 }
 
 /* MENTIONS LÉGALES */
-.mentions_div {
+.mentions-global {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    flex-wrap: wrap;
+    margin: auto;
+    margin-bottom: 2%;
+    font-family: 'Open Sans', sans-serif;
+    text-align: justify;
+}
+}
+.mentions-div {
     margin-top: 1%;
     margin-bottom: 1%;
-    text-align: justify;
 }
 
 /* ERREUR 404 */
