--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -1,4 +1,4 @@
-/* PAGE ACCUEIL */
+/* RECHERCHE SUR LA PAGE ACCUEIL */
 .form-home {
 	display: flex;
 	flex-direction: row;
@@ -28,7 +28,7 @@
 	background-color: transparent;
 }
 
-/* PAGE RECHERCHE */
+/* RECHERCHE SUR LA PAGE RECHERCHE */
 .form-global {
 	margin-top: 3%;
 	margin-right: 20%;
@@ -75,4 +75,23 @@ form > p {
 
 .form-button {
 	width: 80%;
+}
+
+/* PAGE DE RESULTAT */
+.result-global {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.result-item {
+    margin-top: 2.5%;
+    margin-bottom: 2.5%;
+}
+
+.result-item-acte {
+    font-weight: bold;
+    margin-bottom: 0.5%;
 }
