--- a/app/templates/partials/css_projet.html
+++ b/app/templates/partials/css_projet.html
@@ -1,3 +1,5 @@
+<link href="{{ url_for('static', filename='css/header.css')}}" rel="stylesheet" type="text/css">
+<link href="{{ url_for('static', filename='css/footer.css')}}" rel="stylesheet" type="text/css">
 <link href="{{ url_for('static', filename='css/css.css')}}" rel="stylesheet" type="text/css">
 <link href="{{ url_for('static', filename='css/table.css')}}" rel="stylesheet" type="text/css">
 <link href="{{ url_for('static', filename='css/font.css')}}" rel="stylesheet" type="text/css">
