--- a/app/static/css/font.css
+++ b/app/static/css/font.css
@@ -1,2 +1,2 @@
-/* Import des font Google */
+/* Import des fonts Google */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Lato:300i,400|Source+Sans+Pro:300|Goudy+Bookletter+1911&display=swap');
