--- a/app/templates/pages/mentionslegales.html
+++ b/app/templates/pages/mentionslegales.html
@@ -13,12 +13,14 @@
 		<h2>Propriété intellectuelle</h2>
 		<p>Les contenus présentés sur ce site sont couverts par le code de la propriété intellectuelle (CPI). </p>
 		<p>Ils sont basés sur un mémoire de Master recherche rédigé, soutenu et présenté publiquement par Jean-Damien Généro le 5&nbsp;juillet&nbsp;2018 à l'École d'histoire de la Sorbonne (Université Paris&nbsp;I Panthéon-Sorbonne).</p>
-		<p>L'ensemble du code et du contenu est consultable et téléchargeable sur le site <a href="https://github.com/" target="_blank">GitHub</a>. Ce dépôt ne signifie en aucun cas le renoncement au droit de propriété intellectuelle sur les transcriptions et les index présentés sur le site, qui résultent du travail de recherche de Jean-Damien Généro.</p>
+		<p>L'ensemble du code et du contenu est consultable et téléchargeable sur le site GitHub (<a href="https://github.com/" target="_blank">www.github.com</a>). Ce dépôt ne signifie en aucun cas le renoncement au droit de propriété intellectuelle sur les transcriptions et les index présentés sur le site, qui résultent du travail de recherche de Jean-Damien Généro.</p>
 		<p>Pour toute demande de réutilisation des représentations iconographiques et/ou de l’ensemble des contenus éditoriaux produits pour le site : <a href="{{url_for ('contact')}}" target="_blank">page de contact</a>.</p>
 	</div>
 	<div class="mentions-div">
 		<h2>Crédits photographiques et autres mentions relatives aux droits d’auteur</h2>
 		<p>Les photographies ainsi que l’ensemble des œuvres figurant sur ce site proviennent de sources différentes. Si aucun crédit n'est indiqué (en particulier lorsqu'il s'agit de documents d'archives), l'auteur est Jean-Damien Généro.</p>
+		<p>Le sceau présenté dans le header est dessiné par Hadrien de Visme (<a href="https://www.virimahgraphic.fr/">www.virimahgraphic.fr</a>).</p>
+		<p>Les icones LinkedIn, GitHub et Academia présentées dans le footer proviennent de Flaticon (<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>)</p>
 		<p>Les crédits photographiques et autres mentions relatives aux droits d’auteur, tels que spécifiés sur ce site, doivent être respectés.</p>
 	</div>
 	<div class="mentions-div">
@@ -51,6 +53,9 @@
 		<h2>Droit applicable</h2>
 		<p>L’utilisation de ce site est régie par le droit français, quel que soit le lieu d’utilisation.</p>
 		<p>En cas de contestation éventuelle, et après l’échec de toute tentative de recherche d’une solution amiable, les tribunaux français seront seuls compétents pour connaître de ce litige.</p>
+	</div>
+	<div class="mentions-div">
+		<p>Dernière mise à jour de la page : 4 mai 2020.</p>
 	</div>
 </div>
 {% endblock %}
