--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -19,6 +19,10 @@
     # Pour les polices/fonts d'écriture : cf. font.css.
 */
 
+body {
+  margin: 0;
+}
+
 /* LIENS */
 a:link, a:visited {
     text-decoration: none;
