--- a/app/templates/accueil.html
+++ b/app/templates/accueil.html
@@ -9,7 +9,7 @@
             </figcaption>
         </figure>
         <div class="p_home">
-            <div>
+            <!--<div>
                 <form action="{{url_for('resultats')}}" method="GET">
                     <div class="form-home">
                         <input name="keyword" type="search" placeholder="Rechercher dans les actes" aria-label="Recherche">
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div>-->
             <p>Cette édition numérique a pour but de présenter un échantillon des actes de Charles I<sup>er</sup> de Bourbon et d’Agnès de Bourgogne, duc et et duchesse de Bourbon de 1434 à 1456. Elle s'appuie sur un mémoire de Master recherche dirigé par Olivier Mattéoni et présenté à l'École d'histoire de l'Université Paris I Panthéon-Sorbonne en juin 2018, dont le sujet était l'étude de la chancellerie de Charles I<sup>er</sup> au prisme de ses actes.</p>
             <p>L'application est développée par Jean-Damien Généro dans le cadre des enseignements du Master &#171; Technologies numériques appliquées à l'histoire &#187; de l'École nationale des chartes (XML-TEI, XSLT, HTML, CSS, SQL, Python).</p>
         </div>
