--- a/app/static/css/css.css
+++ b/app/static/css/css.css
@@ -1,5 +1,9 @@
 /*
-    # Fichier css principal, contenant :
+    =============================================================================================
+
+                                    FICHIER CSS PRINCIPAL
+
+    # Contenu :
 
         * Mise en forme des liens <a> ;
 
@@ -17,6 +21,8 @@
     # Pour le css du tableau de la page Liste des actes : cf. table.css ;
 
     # Pour les polices/fonts d'écriture : cf. font.css.
+
+    =============================================================================================
 */
 
 body {
