--- a/app/static/css/footer.css
+++ b/app/static/css/footer.css
@@ -1,4 +1,10 @@
-/* css du footer */
+/* 
+  ============================================
+    
+                CSS DU FOOTER
+
+  ============================================
+*/
 
 /* Global */
 .bloc-footer {
