--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -1,4 +1,12 @@
-/* css des formulaires de recherche : Recherche, Résultats */
+/* 
+	============================================
+		
+		CSS DES FORMULAIRES DE RECHERCHE :
+		
+			Pages Recherche et Résultats
+
+	============================================
+*/
 
 /* RECHERCHE SUR LA PAGE RECHERCHE */
 .form-global {
