--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -1,4 +1,10 @@
-/* css du header et de la navbar */
+/* 
+  ============================================
+    
+        CSS DU HEADER ET DE LA NAVBAR
+
+  ============================================
+*/
 
 /* NAVBAR */
 .nav-global {
