--- a/app/static/css/font.css
+++ b/app/static/css/font.css
@@ -1,2 +1,8 @@
-/* Import des fonts Google */
+/* 
+  ============================================
+    
+        IMPORT DES POLICES GOOGLE
+
+  ============================================
+*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Lato:300i,400|Source+Sans+Pro:300|Goudy+Bookletter+1911&display=swap');
