--- a/app/templates/conteneur.html
+++ b/app/templates/conteneur.html
@@ -1,101 +1,66 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-{% include "partials/css_projet.html" %}
-
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Actes de Charles Ier de Bourbon</title>
+    {% include "partials/css_projet.html" %}
 </head>
 
 <body>
     <nav class="nav-global fixed-top">
         <div class="nav-list">
-                <form class="nav-form" action="{{url_for('accueil')}}" method="get" style="margin-right: 3%;">
-                    <button class="dropbtn">Accueil</button>
-                </form>
-                <form class="dropdown nav-form">
-                    <button class="dropbtn">Projet</button>
-                    <div class="dropdown-content">
-                        <a href="{{url_for('projet')}}">À propos</a>
-                        <a href="{{url_for('bibliographie')}}">Bibliographie</a>
-                    </div>
-                </form>
-                <form class="nav-form" action="{{url_for('duc')}}" method="get">
-                    <button class="dropbtn">Le&nbsp;duc</button>
-                </form>
-                <form class="dropdown nav-form">
-                    <button class="dropbtn">Actes</button>
-                    <div class="dropdown-content">
-                        <a href="{{url_for('corpus')}}">Liste des actes</a>
-                        <a href="{{url_for('recherche')}}">Recherche</a>
-                    </div>
-                </form>
-                <form class="dropdown nav-form">
-                    <button class="dropbtn">Index</button>
-                    <div class="dropdown-content">
-                        <a href="{{url_for('index_noms')}}">Index nominum</a>
-                        <a href="{{url_for('index_prosopo')}}">Index prosopographique</a>
-                        <a href="{{url_for('index_lieu')}}">Index locorum</a>
-                    </div>
-                </form>
-                <form class="nav-form" action="{{url_for('contact')}}" method="get">
-                    <button class="dropbtn">Contact</button>
-                </form>
-                <form class="nav-form" action="{{url_for('resultats')}}" method="GET">
-                    <div class="form-home">
-                        <input name="keyword" type="search" placeholder="Rechercher dans les actes" aria-label="Recherche" id="searchbar">
-                        <div>
-                            <button type="submit">Rechercher</button>
-                        </div>
-                    </div>
-                </form>
-        </div>
-    </nav>
-    <!--<nav class="nav-global fixed-top">
-        <button class="dropbtn" style="margin-right: 3%;">
-            <a href="{{url_for('accueil')}}">Accueil</a>
-        </button>
-        <div class="nav-list">
-            <div class="nav-item">
-                <li class="dropdown">
-                  <button class="dropbtn">Projet</button>
-                  <div class="dropdown-content">
+            <form class="nav-form" action="{{url_for('accueil')}}" method="get">
+                <button class="dropbtn">Accueil</button>
+            </form>
+            <form class="dropdown nav-form">
+                <button class="dropbtn">Projet</button>
+                <div class="dropdown-content">
                     <a href="{{url_for('projet')}}">À propos</a>
                     <a href="{{url_for('bibliographie')}}">Bibliographie</a>
-                  </div>
-                </li>
-                <button class="dropbtn">
-                    <a href="{{url_for('duc')}}">Le&nbsp;duc</a>
-                </button>
-                <li class="dropdown">
-                  <button class="dropbtn">Actes</button>
-                  <div class="dropdown-content">
-                    <a href="{{url_for('corpus')}}">Liste des actes</a>
-                    <a href="{{url_for('recherche')}}">Recherche</a>
-                  </div>
-                </li>
-                <li class="dropdown">
-                  <button class="dropbtn">Index</button>
-                  <div class="dropdown-content">
+                </div>
+            </form>
+            <form class="nav-form" action="{{url_for('duc')}}" method="get">
+                <button class="dropbtn">Le&nbsp;duc</button>
+            </form>
+            <form class="dropdown nav-form">
+                <button class="dropbtn">Actes</button>
+                <div class="dropdown-content">
+                <a href="{{url_for('corpus')}}">Liste des actes</a>
+                <a href="{{url_for('recherche')}}">Recherche</a>
+            </div>
+            </form>
+            <form class="dropdown nav-form">
+                <button class="dropbtn">Index</button>
+                <div class="dropdown-content">
                     <a href="{{url_for('index_noms')}}">Index nominum</a>
                     <a href="{{url_for('index_prosopo')}}">Index prosopographique</a>
                     <a href="{{url_for('index_lieu')}}">Index locorum</a>
-                  </div>
-                </li>
-                <button class="dropbtn">
-                    <a href="{{url_for('contact')}}">Contact</a>
-                </button>
-            </div>
+                </div>
+            </form>
+            <form class="nav-form" action="{{url_for('contact')}}" method="get">
+                <button class="dropbtn">Contact</button>
+            </form>
+            <form class="nav-form" action="{{url_for('resultats')}}" method="GET">
+                <div class="form-home">
+                    <input name="keyword" type="search" placeholder="Rechercher dans les actes" aria-label="Recherche" id="searchbar">
+                    <div>
+                        <button type="submit">Rechercher</button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </nav>-->
+    </nav>
         <header class="header-global">
-            <div class="header-text-global">
-                <h1 class="header-h1">
-                    <p class="l1">Actes</p>
-                    <p class="l2">de <hi class="charles">Charles I</hi><sup>er</sup></p>
-                    <p class="l3">de <hi class="bourbon">Bourbon</hi></p>
-                </h1>
+            <div class="header-text">
+                <div class="header-text-l1">
+                    <p><strong>Actes</strong></p>
+                </div>
+                <div class="header-text-l2">
+                    <p>de <strong class="charles">Charles I</strong><sup>er</sup></p>
+                </div>
+                <div class="header-text-l3">
+                    <p>de <strong class="bourbon">Bourbon</strong></p>
+                </div>
             </div>
             <div class="rotate header-img-global">
                 <div>
